k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supply-chain-saga
  labels:
    app.kubernetes.io/part-of: supply-chain-saga
